# godot-pocketpy

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SConstruct  build.py  build.sh  compile_flags.txt  exposed.py  gdenums.py  pyrightconfig.json
.github/workflows/: main.yml
demo/: CubePhysicsBodyDebug.gd  MyScript.py  MyScript.py.uid  cube_physcis.tscn  icon.svg.import  main.tscn  new_script.gd  new_script.gd.uid  project.godot  pyrightconfig.json
demo/addons/godot-pocketpy/: PythonScript_icon.png.import  godot-pocketpy.gdextension  godot-pocketpy.gdextension.uid
demo/addons/immediate_gizmos/: README.md  plugin.cfg
demo/addons/immediate_gizmos/examples/2D/: gizmos.gd  gizmos.gd.uid  scene.tscn  select_me_in_the_editor.gd  select_me_in_the_editor.gd.uid
demo/addons/immediate_gizmos/examples/3D/: gizmos.gd  gizmos.gd.uid  scene.tscn
demo/addons/immediate_gizmos/examples/Simple/: scene.tscn  simple.gd  simple.gd.uid
demo/addons/immediate_gizmos/materials/: immediate_gizmos_line_2d.gdshader.uid  immediate_gizmos_line_2d.tres  immediate_gizmos_line_3d.gdshader  immediate_gizmos_line_3d.gdshader.uid  immediate_gizmos_line_3d.tres  immediate_gizmos_text_2d.gdshader  immediate_gizmos_text_2d.gdshader.uid  immediate_gizmos_text_2d.tres  immediate_gizmos_text_3d.gdshader  immediate_gizmos_text_3d.gdshader.uid  immediate_gizmos_text_3d.tres
demo/addons/immediate_gizmos/scripts/: immediate_gizmos.gd  immediate_gizmos.gd.uid  immediate_gizmos_2d.gd  immediate_gizmos_2d.gd.uid  immediate_gizmos_3d.gd  immediate_gizmos_3d.gd.uid  immediate_gizmos_plugin.gd  immediate_gizmos_plugin.gd.uid
scripts/: count_class_lines.py  tmp.py
src/: register_types.cpp  register_types.h
src/lang/: Bindings.cpp  Bindings.hpp  BindingsHooks.cpp  Common.cpp  Common.hpp  CubePhysics.cpp  CubePhysics.hpp  LevelDB.cpp  LevelDB.hpp  PythonEditorPlugin.hpp  PythonScript.cpp  PythonScript.hpp  PythonScriptInstance.cpp  PythonScriptInstance.hpp  PythonScriptLanguage.cpp  PythonScriptLanguage.hpp  PythonScriptMetadata.cpp  PythonScriptMetadata.hpp  PythonScriptMethod.cpp  PythonScriptMethod.hpp  PythonScriptProperty.cpp  PythonScriptProperty.hpp  PythonScriptResourceFormatLoader.cpp  PythonScriptResourceFormatLoader.hpp  PythonScriptResourceFormatSaver.cpp  PythonScriptResourceFormatSaver.hpp  PythonScriptSignal.cpp  PythonScriptSignal.hpp
src/support/: custom_sname.cpp  external_string_names.cpp
stubgen/: __main__.py  _schema_gdt.yaml  config.py  converters.py  enum.py  export.py  map.py  parse.py  pyscript_to_gdscript.py  schema.py  schema_gdt.py  schema_py.py  tools.py  v1_validate_schema.py  writer.py
stubgen/_deprecated/: pyscript_to_gdscript.py  v1___main__.py
stubgen/v4/: __init__.py  code_generator.py  godot_types.py  mapper.py  schema_py.py  type_manager.py  validators.py
typings/: dummy_godot_class.pyi  exposed_godot_api.pyi  godot.py  godot.pyi  godot_class.pyi  test.py
typings/godot/: __init__.pyi  enum.pyi  typings.pyi
